<resources>
    <string name="app_name">BakingApp</string>
    <string name="NoInterenet">No internet connection</string>

    <string name="bakingtime">Baking Time</string>
    <string name="ingredients"><ul>Ingredients</ul></string>
    <string name="ingredient">Ingredient :  </string>
    <string name="measure">Measure  :  </string>
    <string name="quantity">Quantity :  </string>
    <string name="steps">Steps</string>
    <string name="action_settings">Settings</string>
    <string name="Next">Next</string>
    <string name="prev">Prev</string>
    <string name="title_activity_recipe_details">RecipeDetails</string>
    <string name="title_activity_recipe_step_detail">RecipeStepDetail</string>
    <string name="add_widget">Add widget</string>
    <string name="add">added to widget</string>
    <string name="appwidget_text">EXAMPLE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Test</string>
</resources>
