<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/some_space">

    <android.support.v7.widget.CardView
        android:id="@+id/recipe_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/some_space"
        android:background="@color/white"
        android:padding="@dimen/more_space"
        app:cardCornerRadius="@dimen/little_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/more_little_space">

            <TextView
                android:id="@+id/recipe_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/extra_large_text_size" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>