...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/some_space"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/some_space"
                android:layout_marginStart="@dimen/some_large_space"
                android:background="@color/colorPrimary"
                android:paddingEnd="@dimen/some_more_space"
                android:paddingStart="@dimen/some_more_space"
                android:text="@string/prev"
                android:textColor="@color/white"
                android:visibility="invisible" />

            <Button
                android:id="@+id/next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/more_little_space"
                android:background="@color/dark_white"
                android:paddingEnd="@dimen/some_more_space"
                android:paddingStart="@dimen/some_more_space"
...
