<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    android:paddingBottom="@dimen/more_space"
    android:paddingLeft="@dimen/more_space"
    android:paddingRight="@dimen/more_space"
    android:paddingTop="@dimen/more_space">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_rv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</FrameLayout>

